--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "todo",
+  "name": "onboarding-todo",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,6 +10,7 @@
     "@types/node": "^17.0.42",
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
+    "history": "^5.3.0",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.1",
     "react": "^18.1.0",
@@ -50,8 +51,10 @@
     ]
   },
   "devDependencies": {
+    "@types/jest-axe": "^3.5.3",
     "autoprefixer": "^10.4.7",
     "eslint-config-prettier": "^8.5.0",
+    "jest-axe": "^6.0.0",
     "postcss": "^8.4.14",
     "prettier": "^2.6.2",
     "tailwindcss": "^3.1.2"
